Back to java 10 because 11 has problems